# ToneGrab

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py
.github/workflows/: build.yml
assets/: convert_icon.py  convert_icon_simple.py
src/: __init__.py  main.py
src/core/: __init__.py  config.py  converter.py  downloader.py  downloader_refactored.py
src/ui/: __init__.py  download_worker.py  main_window.py  styles.py  widgets.py
src/utils/: __init__.py  helpers.py  system.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_downloader.py  test_helpers.py  test_playlist.py
